--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
-<html>
+<!doctype html>
     <head>
+        <title>Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <div>
+            <body>
         <h1>Simple Interest Calculator</h1>
-
+        <div class=maindiv> 
         Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+        Rate <input type="range"  id="rate" name="rate" min="1" max="20" step="0.25" oninput="amount.value=rate.value">
+        <span><output id="amount" name= "amount" for="rate">10.25%</output="10.25%"></span> <br>
 
-        <button onclick="compute()">Compute</button>
-    </body>
+        No. of Years 
+        <select id="years">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+        </select> <br/>
+
+        <button onclick="compute">Compute Interest</button>
+        <span id="result"></span>
+            </body>
+    </div>
+    <footer>Rich Message</footer>
 </html>
