--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <option value="10">10</option>
         </select> <br/>
 
-        <button onclick="compute">Compute Interest</button>
+        <button onclick="compute()">Compute Interest</button>
         <span id="result"></span>
             </body>
     </div>
